added a way to write in the second number

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <div class="first">
             <div class="clear" onclick="erase()"><span>C</span></div>
-            <div class="square-root" onclick="square()"><span>√x</span></div>
-            <div class="precent" onclick="precent()"><span>%</span></div>
-            <div class="divide" onclick="divide()"><span>/</span></div>
+            <div class="cubed" onclick="cubed()"><span>x³</span></div>
+            <div class="squared" onclick="squared()"><span>x²</span></div>
+            <div class="divide" onclick="divide()"><span>÷</span></div>
         </div>
         <div class="second">
             <div class="seven" onclick="seven()"><span>7</span></div>
@@ -41,9 +41,9 @@
             <div class="plus" onclick="plus()"><span>+</span></div>
         </div>
         <div class="fifth">
-            <div class="zero"><span>0</span></div>
-            <div class="decimal"><span>.</span></div>
-            <div class="equal"><span>=</span></div>
+            <div class="zero" onclick="zero()"><span>0</span></div>
+            <div class="decimal" onclick="decimal()"><span>.</span></div>
+            <div class="equal" onclick="calculateAnswer()"><span>=</span></div>
         </div>
 
     </div>
