--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
     <title>Calculator</title>
 </head>
 
@@ -15,6 +16,7 @@
             <span id="num1">0</span>
             <span id="operator"></span>
             <span id="num2"></span>
+            <span id="answer"></span>
         </div>
         <div class="first">
             <div class="clear" onclick="erase()"><span>C</span></div>
