fixed issue that the user could write an infinite amount of numbers

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="seven" onclick="seven()"><span>7</span></div>
             <div class="eight" onclick="eight()"><span>8</span></div>
             <div class="nine" onclick="nine()"><span>9</span></div>
-            <div class="multiply" onclick="multiply()"><span>X</span></div>
+            <div class="multiply" onclick="multiply()"><span>x</span></div>
         </div>
         <div class="third">
             <div class="four" onclick="four()"><span>4</span></div>
